# mocpy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MOC_from_fits_file.ipynb  README.md  README.rst  api.html  appveyor.yml  codemeta.json  conftest.py  contribute.html  environment.yml  from_polygon.ipynb  genindex.html  index.html  install.html  moc_catalog_filtering.py  objects.inv  pyproject.toml  readthedocs.yml  requirements.txt  search.html  searchindex.js  setup.py  test_notebooks.py  tmoc building test.ipynb  tmoc_example.ipynb
.cargo/: config.toml
.github/workflows/: check-rust-versions.yml  codemeta-validator.yml  cov-and-doc.yml  deploy-docs.yml  deploy.yml  emscripten.yml  notebooks.yml  release.yml  test.yml  test.yml.info
PyMOC/: README.md
_collections/notebooks/: 00-MOCpy_introduction.html  00-MOCpy_introduction.ipynb  01-Creating_MOCs_from_shapes.html  01-Creating_MOCs_from_shapes.ipynb  02-Creating_MOCs_from_astropy_regions.html  02-Creating_MOCs_from_astropy_regions.ipynb  FITS-image-pixels-intersecting-MOC.html  FITS-image-pixels-intersecting-MOC.ipynb  First_Steps_with_FMOCs.html  First_Steps_with_FMOCs.ipynb  STMOC from time ranges.html  STMOC from time ranges.ipynb  Space & Time coverages.html  Space & Time coverages.ipynb  compute_moc_borders.html  compute_moc_borders.ipynb  filtering_astropy_table.html  filtering_astropy_table.ipynb  from-astropy-regions.html  from_astropy_table.html  from_astropy_table.ipynb  from_fits_and_intersection.html  from_fits_and_intersection.ipynb  from_image_with_mask.html  from_polygon.html  from_polygon.ipynb  from_vizier_table.html  from_vizier_table.ipynb  query_vizier_table.html  query_vizier_table.ipynb  tmoc.html  tmoc.ipynb
_downloads/76bfdfa91fbf26eedff1b6df27b80f8a/: plot_TMOC_SDSS_r.py
_downloads/85a8db90f2b029350ee435ba55aff707/: polygon_coverage.py
_downloads/b7c26a850c40e6d92234396ac4ff0706/: calculate_moc_sky_area.py
_modules/: index.html
_sources/: contribute.rst.txt  index.rst.txt  install.rst.txt
_static/: bootstrap-astropy.css  mocpy.css
binder/: environment.yml  postBuild
docs/: Makefile  api.rst  conf.py  contribute.rst  examples.rst  fmoc.rst  index.rst  install.rst  make.bat  references.bib
examples/: MOCPy_example2.ipynb  MOCPy_example4.ipynb  PyMOC_example1.ipynb  PyMOC_example2.ipynb  astropy_wcs.py  bayestar.py  compute_borders.py  examples.html  logical_operations.py  plot_SDSS_r.py  user_documentation.html
intervals/: Cargo.toml
intervals/src/: bounded.rs  intervals.rs  lib.rs  ranges.rs
mocpy/: __init__.py  abstract_moc.py  interval_set.py  moc.py  multiprocessing.py  parallel_task.py  py23_compat.py  serializer.py  test_mocpy.py  tmoc.py  utils.py  version.py
notebooks/: 00-MOCpy_introduction.ipynb  01-Creating_MOCs_from_shapes.ipynb  02-Creating_MOCs_from_astropy_regions.ipynb  03-query_vizier_table_with_a _MOC.ipynb  FITS-image-pixels-intersecting-MOC.ipynb  First_Steps_with_FMOCs.ipynb  GALEX boundaries.ipynb  MOCPy_example1.ipynb  MOCPy_example2.ipynb  MOCPy_example3.ipynb  MOCPy_example4.ipynb  MOCPy_example5.ipynb  MOCPy_from_image.ipynb  STMOC from time ranges.ipynb  Space & Time coverages.ipynb  WP5 - astroquery.cds & MOCPy.ipynb  borders.ipynb  compute_moc_borders.ipynb  filtering_astropy_table.ipynb  from_astropy_table.ipynb  from_fits_and_intersection.ipynb  from_image_with_mask.ipynb  from_polygon.ipynb  from_vizier_table.ipynb  interactive-slider.ipynb  perimeter.ipynb  query_vizier_table.ipynb  sdss_moc.fits  tmoc.ipynb  tmoc_example.ipynb  xmm_inter_2mass_stmoc.fits
requirements/: contributing.txt  docs.txt  environment.yml  notebooks.txt  tests.txt
resources/: CDS-I-125A-catalog_MOC.fits  V_147_sdss12.moc.fits  bayestar.multiorder.fits  fractal.fits  u_gal.fits
src/: core.rs  coverage.rs  lib.rs  ndarray_fromto.rs  ranges.rs  sfmoc.rs  spatial_coverage.rs  temporal_coverage.rs  time_space_coverage.rs
src/intervals/: Cargo.toml
src/intervals/benches/: moc_and.rs  moc_minus.rs  moc_or.rs  ranges2cells.rs
src/intervals/src/: bounded.rs  hpxranges.rs  hpxranges2d.rs  idx.rs  intervals.rs  lib.rs  moc.rs  mocell.rs  mocells.rs  mocqty.rs  mocrange.rs  mocranges.rs  mocranges2d.rs  nestedranges.rs  nestedranges2d.rs  qty.rs  ranges.rs  ranges2d.rs  uniqranges.rs  utils.rs  valuedcell.rs
src/intervals/src/deser/: ascii.rs  json.rs  mod.rs
src/intervals/src/deser/fits/: common.rs  error.rs  keywords.rs  mod.rs
src/intervals/src/moc/: cell.rs  cellcellrange.rs  decorators.rs  mod.rs  range.rs
src/intervals/src/moc/range/: mod.rs
src/intervals/src/moc/range/op/: and.rs  check.rs  convert.rs  minus.rs  mod.rs  or.rs  xor.rs
src/intervals/src/moc2d/: cell.rs  cellcellrange.rs  decorators.rs  mod.rs  range.rs
src/intervals/src/ranges/: mod.rs  ranges2d.rs
src/moc/: Cargo.toml
src/moc/benches/: moc_and.rs  moc_minus.rs  moc_or.rs  ranges2cells.rs
src/moc/src/: hpxranges2d.rs  idx.rs  lib.rs  mocranges2d.rs  qty.rs  utils.rs
src/moc/src/deser/: ascii.rs  json.rs  mod.rs
src/moc/src/deser/fits/: common.rs  keywords.rs  mod.rs
src/moc/src/elem/: cell.rs  cellcellrange.rs  cellrange.rs  mod.rs  range.rs  valuedcell.rs
src/moc/src/elemset/: cell.rs  cellcellrange.rs  mod.rs
src/moc/src/elemset/range/: hpx.rs  mod.rs  uniq.rs
src/moc/src/moc/: cell.rs  cellcellrange.rs  decorators.rs  mod.rs
src/moc/src/moc/builder/: fixed_depth.rs  maxdepth_range.rs  mod.rs
src/moc/src/moc/range/: mod.rs
src/moc/src/moc/range/op/: and.rs  check.rs  convert.rs  degrade.rs  merge.rs  minus.rs  mod.rs  not.rs  xor.rs
src/moc/src/moc2d/: adapters.rs  cell.rs  cellcellrange.rs  decorators.rs  mod.rs  range.rs
src/moc/src/ranges/: mod.rs  multirange_op.rs  ranges2d.rs
stubs/: mocpy.FrequencyMOC.html  mocpy.MOC.html  mocpy.SFMOC.html  mocpy.STMOC.html  mocpy.TimeMOC.html  mocpy.WCS.html  mocpy.World2ScreenMPL.html
travis/: deploy.sh  deploy_doc.sh  deploy_i686.sh  testing.sh  testing_i686.sh  testing_py3_ubuntu_32.sh
(+113 files in other folders)
