[package]
name = "MOCPy"
version = "0.19.1"
authors = [
  "Matthieu Baumann <matthieu.baumann@astro.unistra.fr>",
  "Thomas Boch <thomas.boch@astro.unistra.fr>",
  "Manon Marchand <manon.marchand@astro.unistra.fr>",
  "F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>",
]
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
categories = ["algorithms", "science"]
repository = "https://github.com/cds-astro/mocpy"
description = "MOC parsing and manipulation in Python"
documentation = "https://cds-astro.github.io/mocpy"
exclude = [".*", "binder/", "docs/", "notebooks/", "resources/"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "mocpy"
path = "src/lib.rs"
test = true
doctest = true
bench = true
crate-type = ["cdylib"]

[dependencies]
# moc = { version = "0.19", features = ["storage"] }
moc = { git = 'https://github.com/cds-astro/cds-moc-rust', rev = '8d2d57a1883d54bd3d7df677908cbcf577a0703c', features = ["storage"] }
# moc = { git = 'https://github.com/cds-astro/cds-moc-rust', branch = 'main', features = ["storage"] }
healpix = { package = "cdshealpix", version = "0.7" }
# healpix = { package = "cdshealpix", git = 'https://github.com/cds-astro/cds-healpix-rust', branch = 'master' }
rayon = "1.11"
num_threads = "0.1"

[dependencies.numpy]
version = "0.26"

[dependencies.ndarray]
version = "0.16"
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["rayon"]

[dependencies.pyo3]
version = "0.26"
features = ["extension-module"]

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0



