[package]
name = "intervals"
version = "0.1.0"
authors = ["Matthieu Baumann <matthieu.baumann@astro.unistra.fr>"]
edition = "2018"

[lib]
name = "intervals"
path = "src/lib.rs"
test = true
doctest = true
bench = true

[dependencies]
num = "0.2"
rand = "0.6.5"
rayon = "1.2.0"
healpix = { package = "cdshealpix", git = 'https://github.com/cds-astro/cds-healpix-rust', branch = 'master' }

[dependencies.ndarray]
version = "0.14.0"
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["rayon"]

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0