[package]
name = "intervals"
version = "0.3.0"
authors = ["Matthieu Baumann <matthieu.baumann@astro.unistra.fr>", "F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
edition = "2018"

[lib]
name = "intervals"
path = "src/lib.rs"
test = true
doctest = true
bench = true

[dependencies]
num = "0.4"
rayon = "1.5.1"
nom = "6.1.2"
quick-error = "2.0.1"
healpix = { package = "cdshealpix", version = "0.5.4" }
#healpix = { package = "cdshealpix", git = 'https://github.com/cds-astro/cds-healpix-rust', branch = 'master' }
serde_json = "1.0"
byteorder = "1.4.3"

[dependencies.ndarray]
version = "0.14"
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["rayon"]


[dev-dependencies]
rand = "0.8.3"
criterion = "0.3"

[[bench]]
name = "ranges2cells"
harness = false

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0