[package]
name = "intervals"
version = "0.3.0"
authors = ["Matthieu Baumann <matthieu.baumann@astro.unistra.fr>", "F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
edition = "2018"

[lib]
name = "intervals"
path = "src/lib.rs"
test = true
doctest = true
bench = true

[dependencies]
num = "0.4"
rayon = "1.5.1"
nom = "6.1.2"
quick-error = "2.0.1"
healpix = { package = "cdshealpix", version = "0.5.4" }
serde_json = "1.0"
byteorder = "1.4.3"

[dev-dependencies]
rand = "0.8.3"
criterion = "0.3"

[[bench]]
name = "ranges2cells"
harness = false

[[bench]]
name = "moc_and"
harness = false

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0